--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -3774,6 +3774,7 @@ body {
 .mui-field > .mui-field-label-horizontal {
   display: inline-flex;
   align-items: center;
+  align-self: flex-start;
   min-block-size: var(--mui-field-input-size);
   margin: 0;
 }
